...
            thumbColor={biometrics ? "#402105" : "#F4F3F4"}
          />
        </View>
      </View>

      <TouchableOpacity style={[styles.logoutBtn, { marginBottom: SPACE.xl + insets.bottom }]} onPress={handleLogout}>
        <Text style={styles.logoutText}>Sair da conta</Text>
      </TouchableOpacity>
    </ScrollView>
  );
}

const styles = StyleSheet.create({
...
